# neumasapk1

./: .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CODEBASE_AUDIT_REPORT.md  DEPLOYMENT.md  DEPLOYMENT_RUNBOOK.md  Procfile  SENTRY_SETUP.md  docker-compose.yml  nixpacks.toml  railway.toml  start.sh  vercel.json
.github/: SECRETS.md
.github/workflows/: ci.yml  deploy-web.yml  deploy-worker.yml  security-scan.yml
docs/adr/: 001-canonical-schema-strategy.md  002-auth-session-model.md  003-inventory-ledger-model.md  004-ai-routing-and-cost-accounting.md  005-retrieval-architecture.md
docs/api/: admin-api-contract.md  mobile-api-contract.md  product-surface.md
docs/runbooks/: auth-recovery.md  report-generation.md  retry-and-idempotency.md  scan-failure-recovery.md
neumas-backend/: .env.example  .gitignore  Dockerfile  README.md  celerybeat-schedule  docker-compose.yml  pyproject.toml  railway-worker.toml  railway.toml  setup_schema.sql  start_worker.sh  test_admin_create.py  test_rls_bypass.py  test_signup.py  test_signup_admin.py  test_user_insert.py
neumas-backend/app/: __init__.py  main.py
neumas-backend/app/api/: __init__.py  deps.py
neumas-backend/app/api/admin/: audit.py  health.py  organizations.py  overview.py  properties.py  usage.py  users.py
neumas-backend/app/api/routes/: __init__.py  admin.py  alerts.py  analytics.py  auth.py  documents.py  inventory.py  predictions.py  reports.py  scans.py  shopping.py  vendor_analytics.py  vendors.py
neumas-backend/app/core/: __init__.py  celery_app.py  config.py  constants.py  idempotency.py  logging.py  security.py  tracing.py
neumas-backend/app/db/: __init__.py  models.py  supabase_client.py  supabase_client_old.py
neumas-backend/app/db/repositories/: __init__.py  admin.py  admin_repository.py  alerts.py  audit_logs.py  canonical_items.py  document_line_items.py  documents.py  email_logs.py  inventory.py  inventory_movements.py  organizations.py  patterns.py  predictions.py  properties.py  reports.py  scans.py  shopping_lists.py  usage_metering.py  users.py  vendors.py
neumas-backend/app/schemas/: __init__.py  admin.py  audit.py  auth.py  copilot.py  documents.py  inventory.py  mobile.py  organizations.py  predictions.py  scans.py  shopping.py
neumas-backend/app/services/: __init__.py  admin_service.py  alert_service.py  analytics_service.py  audit_service.py  auth_service.py  budget_agent.py  catalog_service.py  context_builder.py  copilot_tool_service.py  dev_stubs.py  document_review_service.py  document_service.py  email_service.py  executive_briefing_service.py  inventory_ledger_service.py  inventory_service.py  llm_failover.py  orchestration_service.py  pattern_agent.py  predict_agent.py  prediction_service.py  reorder_service.py  report_service.py  restock_service.py  retrieval_service.py  scan_service.py  shopping_agent.py  shopping_service.py  usage_service.py  vendor_analytics_service.py  vendor_service.py  vision_agent.py
neumas-backend/app/tasks/: __init__.py  agent_tasks.py  alert_tasks.py  evaluation_tasks.py  report_tasks.py  scan_tasks.py  shopping_tasks.py
neumas-backend/app/utils/: file_hash.py  fuzzy_match.py  unit_conversion.py
neumas-backend/docs/api/: mobile-api-contract.md
neumas-backend/migrations/: 0001_baseline.sql  0002_inventory_movements.sql  0003_documents_and_line_items.sql  0004_vendors_and_aliases.sql  0005_canonical_items_and_aliases.sql  0006_alerts_and_audit_logs.sql  0007_reports_and_usage.sql  0012_inventory_category_fk_compat.sql
neumas-backend/scripts/: backfill_inventory_vendor_links.py  backfill_vendor_ids.py  create_dev_user.py  smoke_test.py
neumas-backend/supabase/: schema.sql  schema_02_tenant_inventory.sql
neumas-backend/supabase/.temp/: linked-project.json  pooler-url  project-ref
neumas-backend/supabase/migrations/: 20260417_operational_model.sql  202604220101_consumption_restock.sql  202604220102_inventory_snapshots.sql  202604220103_inventory_value_snapshots.sql  202604220104_inventory_vendor_fk.sql  20260422_inventory_vendor_fk.sql
neumas-backend/tests/: conftest.py  test_admin_dependency.py  test_auth.py  test_inventory.py  test_inventory_api_regressions.py  test_inventory_ledger.py  test_inventory_service_regressions.py  test_llm_failover.py  test_llm_failover_regressions.py  test_operational_loop.py  test_reliability.py  test_restock_service.py  test_scan_pipeline.py  test_vendor_alerts_admin.py
neumas-health-agent/: .env.example  README.md  main.py  railway.toml
neumas-web/: .dockerignore  .env.example  .gitignore  Dockerfile  instrumentation.ts  middleware.ts  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  sentry.client.config.ts  sentry.edge.config.ts  sentry.server.config.ts  vercel.json  vitest.config.ts
neumas-web-vite/: .env.local  DEPRECATED.md  README.md  index.html  package-lock.json  package.json
neumas-web-vite/src/: App.tsx  index.css
neumas-web-vite/src/api/: auth.ts  client.ts  inventory.ts  predictions.ts  scans.ts  shopping.ts
neumas-web-vite/src/components/: NavBar.tsx  PrivateRoute.tsx
neumas-web-vite/src/context/: AuthContext.tsx
neumas-web-vite/src/pages/: DashboardPage.tsx  LoginPage.tsx  ScanUploadPage.tsx
neumas-web-vite/src/types/: index.ts
neumas-web/public/: llms.txt  og-image.INSTRUCTIONS.txt  robots.txt
neumas-web/src/__tests__/: login.test.tsx
neumas-web/src/app/: error.tsx  global-error.tsx  globals.css  layout.tsx  opengraph-image.tsx  page.tsx  robots.ts  sitemap.ts  twitter-image.tsx
neumas-web/src/app/about/: page.tsx
neumas-web/src/app/auth/: page.tsx
neumas-web/src/app/contact/: page.tsx
neumas-web/src/app/crawler-readiness/: page.tsx
neumas-web/src/components/: EmptyState.tsx  LandingPage.tsx  PilotIntake.tsx  auth-redirect.tsx  error-boundary.tsx  providers.tsx
neumas-web/src/lib/: analytics.ts  api-handler.ts  auth-session.ts  backend-url.ts  config.ts  inventory-dates.ts  logger.ts  offline-queue.ts  operations.ts  public-content.ts  public-site.ts  scan-progress.test.ts  scan-progress.ts  supabase.ts
(+106 files in other folders)
