[project]
name = "neumas-backend"
version = "1.0.0"
description = "Intelligent inventory management backend for hospitality"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "Proprietary"}
authors = [
    {name = "Neumas Team", email = "dev@neumas.io"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]==0.32.0",
    "gunicorn==23.0.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "email-validator>=2.0.0",
    "supabase==2.10.0",
    "sqlalchemy>=2.0.36",
    "celery[redis]>=5.4.0",
    "redis>=5.2.0",
    "structlog>=24.4.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "httpx>=0.27.2",
    "openai>=1.55.0",
    "anthropic>=0.39.0",
    "python-multipart>=0.0.12",
    "sentry-sdk[fastapi,celery]>=2.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.27.2",
    "ruff==0.11.2",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
]
test = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.27.2",
]

[project.scripts]
neumas = "app.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
# tests/manual/ requires live Supabase credentials — excluded from automated CI
addopts = "-v --tb=short --ignore=tests/manual"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "B904",   # raise from errors
    "ARG001", # unused function argument (common in FastAPI)
    "ARG002", # unused method argument (interface/stub implementations)
    "ARG005", # unused lambda argument
]

[tool.ruff.lint.per-file-ignores]
"app/main.py" = ["E402"]        # router imports after Sentry/logging init
"app/core/celery_app.py" = ["E402"]  # celery task imports after app init
# Pre-existing: lazy/conditional imports in DB/service modules
"app/db/models.py" = ["E402", "F821"]
"app/db/repositories/*.py" = ["E402", "F821"]
"app/services/alert_service.py" = ["E402"]
"app/services/catalog_service.py" = ["E402"]
"app/services/document_service.py" = ["E402"]
"app/services/inventory_ledger_service.py" = ["E402"]
"app/services/inventory_service.py" = ["E402"]
"app/services/report_service.py" = ["E402"]
"app/services/scan_service.py" = ["E402"]
"app/services/vendor_service.py" = ["E402"]
"app/services/auth_service.py" = ["F821"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "supabase.*",
    "celery.*",
    "redis.*",
    "jose.*",
    "passlib.*",
]
ignore_missing_imports = true

[tool.coverage.run]
source = ["app"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
